--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@ border: solid 2px;
   <option value="Brother">
   <option value="Sister">
 </datalist>
+<datalist id="COVIDVacManu">
+  <option value="Moderna">
+  <option value="Pfizer">
+  <option value="Johnson and Johnson">
+</datalist>
+
 
 
 </head>
@@ -334,15 +340,15 @@ border: solid 2px;
   <details>
     <summary><label for="smEthnicity">Ethnicity:</label>
       <select name="smEthnicity" id="smEthnicity">
-	<option value="Not Hispanic">Not Hispanic</option>
-	<option value="Hispanic">Hispanic</option>
+    <option value="Not Hispanic">Not Hispanic</option>
+    <option value="Hispanic">Hispanic</option>
       </select>
     </summary>
     <fieldset>
       <legend>Ethnicity Categories:</legend>
       <dl>
-	<dt>Hispanic or Latino</dt>
-	<dd>A person of Cuban, Mexican, Puerto Rican, South or Central American, or other Spanish culture or origin, regardless of race. The term, "Spanish origin", can be used in addition to "Hispanic or Latino".</dd>
+    <dt>Hispanic or Latino</dt>
+    <dd>A person of Cuban, Mexican, Puerto Rican, South or Central American, or other Spanish culture or origin, regardless of race. The term, "Spanish origin", can be used in addition to "Hispanic or Latino".</dd>
       </dl>
     </fieldset>
     <p>For more information go to:</p>
