--- a/index.html
+++ b/index.html
@@ -876,8 +876,10 @@ border: solid 2px;
 <br>
 <br>Hold Co Moto: Nomads
 <br>Hold Co Response: Kill them all
+<br>
 <br>309th BN Moto: Sentinels of Security
 <br>309th BN Response: Sentinel Pride!
+<br>
 <br>C Co, 309th Moto: Maintain the Edge
 <br>C Co, 309th Response: Razor Sharp
 
@@ -1099,34 +1101,32 @@ Medical:
 <br>
 <br>Chapel Service
 <br>Confessions: by Appointment 
-
+<br>
 <br>1215 - Friday - Mail Post Chapel, Room 24 - Muslim
-
 <br>1830 - Friday - Prosser Chapel - Hospitality House
 
-
+<br>
 <br>1230 - Saturday - Prosser Chapel - Norse Pagan
 
-
-<br>0800 - Every other Sunday - Prosser Chapel - Jewish
-
+<br>
+<br>0800 - Sunday (every other) - Prosser Chapel - Jewish
 <br>0900 - Sunday - Main Post Chapel - Sunday mass
-
 <br>0930 - Sunday - Kino Chapel - Protestant Gospel/Worship  Service
-
 <br>0930 - Sunday - 305th MI BN Classroom - General Protestant, Contemporary AIT Service
-
 <br>1015-1200 - Sunday - Blessed Sacrament Chapel (Annex at Main Post Chapel) - Individual Prayer
-
 <br>1100 - Sunday - Main Post Chapel - Protestant Service
-
 <br>1300 - Sunday - Prosser Village Chapel Annex - Latter-Day Saints (LDS)
+<br>
+
+<br><a href="https://www.facebook.com/HuachucaHospitalityHouse">https://www.facebook.com/HuachucaHospitalityHouse</a>
+<br><a href="https://www.instagram.com/huachucahospitalityhouse">https://www.instagram.com/huachucahospitalityhouse</a>
+<br>
 
 
-
-
-
-
+<br>
+<br>If you need to talk with a chaplain, let a DS know so we can schedule your meeting/appointment. 
+<br>You DON'T need to disclose the reason you want to meet. 
+<br><br>
 
 
 
