--- a/index.html
+++ b/index.html
@@ -979,14 +979,13 @@ Medical:
 <br><a href="tel:520-533-5311">520-533-5311</a><label> - AWC</label>
 <br>
 
-<br>Counseling:
+<br><br>Counseling:
 <br><a href="tel:520-533-5161">520-533-5161</a><label> - Behavioral Health (BH)</label>
-
-808-291-7882 - Chaplain (Confidential) (CPT Gaskin) 520-533-2291 / 8774 - On-Call Chaplain (Confidential) 
-
+<br>Chaplain (Confidential)
 
 
-<br>Family:
+
+<br><br>Family:
 <br><a href="tel:520-515-9000">520-515-9000</a><label> - Housing</label>
 <br><a href="tel:520-533-3083">520-533-3083</a><label> - Housing</label>
 <br><a href="https://www.mountainvistacommunities.com">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
@@ -1038,7 +1037,7 @@ Medical:
 <br><br>Facilities:
 <br><a href="tel:520-533-1608">520-533-1608</a><label> - DEERS</label>
 <br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
-<br><a href="tel:520-732-6933">520-732-6933</a><label> - Ed Center</label>
+<br><a href="tel:520-732-6933">520-732-6933</a><label> - Education Center</label>
 
 <br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>: M,Tu,W,F: 0830-1630; Th: 1330-1630
 <br><a href="mailto:usarmy.huachuca.icoe.mbx.inspector-general@mail.mil">usarmy.huachuca.icoe.mbx.inspector-general@mail.mil</a>
@@ -1050,20 +1049,22 @@ Medical:
 
 <br><br>
 
-<br><a href="tel:520-533-2009">520-533-2009</a><label> - JAG</label>
-<br><a href="tel:520-533-3208">520-533-3208</a><label> - JAG</label>
+<br><br>JAG
+<br><a href="tel:520-533-2009">520-533-2009</a>
+<br><a href="tel:520-533-3208">520-533-3208</a>
 
-<br><a href="tel:520-538-5762">520-538-5762</a><label> - Finance</label>
-<br><a href="tel:520-538-2982">520-538-2982</a><label> - Finance</label>
+<br><br>Finance
+<br><a href="tel:520-538-5762">520-538-5762</a>
+<br><a href="tel:520-538-2982">520-538-2982</a>
 
 <br><br>ACS:
 <br><a href="tel:520-533-2330">520-533-2330</a>
 <br><a href="tel:520-533-5719">520-533-5719</a>
 <br><a href="tel:520-538-5768">520-538-5768</a>
 
-<br>
-<br><a href="tel:520-533-5312">520-533-5312</a><label> - AER</label>
-<br><a href="tel:1-877-272-7337">1-877-272-7337</a><label> - AER</label>
+<br><br>AER
+<br><a href="tel:520-533-5312">520-533-5312</a>
+<br><a href="tel:1-877-272-7337">1-877-272-7337</a>
 
 <br>
 <br><a href="tel:520-533-2967">520-533-2967</a><label> - Financial Readiness Program</label>
@@ -1073,8 +1074,7 @@ Medical:
 
 
 
-<br>
-<br>Law:
+<br><br>Law:
 <br>520-533-2291 - IOC (After hrs Emergencies)
 <br>520-533-3000 - Military Police (MP)
 <br>520-533-2628 - Criminal Investigation Division (CID)
@@ -1127,8 +1127,11 @@ Medical:
 <br>If you need to talk with a chaplain, let a DS know so we can schedule your meeting/appointment. 
 <br>You DON'T need to disclose the reason you want to meet. 
 <br><br>
+<br>808-291-7882 - Chaplain (Confidential) (309th, CPT Gaskin)
+<br>520-533-2291 / 8774 - On-Call Chaplain (Confidential)
 
 
+<br><br>
 
 <br>
 <br>CIF:
