--- a/index.html
+++ b/index.html
@@ -821,6 +821,7 @@ border: solid 2px;
 
 <p>Send your JSON file to: 
   <a href="javascript:(function()%7BemailSend()%3B%7D)()%3B">Hold Company Email</a>
+  <!--a href="javascript:void(0)" onclick="emailSend()">Hold Company Email</a-->
 </p>
 <details><summary>iPhone users</summary>
   <p>If when you click on 'Download JSON' a new page opens with your information coded, copy all of it, go back to the previous page, click on 'Send your JSON file...' and paste the contents of the information coded to the body of the email.</p>
@@ -864,6 +865,7 @@ border: solid 2px;
 <br>-Must turn in SC slip to DS
 <br>-Illness: NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
 <br>-Injury:  NLT 0420 @ CQ desk  |  NLT 0445 @ MISC
+<br>-Setup Appointments: NLT 0700 @ MISC
 <br>
 <br>Appointments:
 <br>-Must turn in to DS
@@ -872,6 +874,8 @@ border: solid 2px;
 <br>-Knock on the door (or plastic piece near the door)  and announce:
 <br>  [your Rank and  Name] with a battle buddy (you can say their name) requesting permission to speak with a DS. 
 <br>  Ex. Private Doe with specialist Smith requesting permission to speak with a drill sergeant.
+<br>  Ex. Private Doe with a battle buddy requesting permission to speak with a drill sergeant.
+
 
 <br>
 <br>Hold Co Moto: Nomads
@@ -892,13 +896,13 @@ border: solid 2px;
 <br>
 <br>Weinstein DFAC: 
 <br>M-F: 0600-0730, 1130-1300, 1700-1830
-<br>Weekends/Holidays: 
+<br>Weekends/Holidays: ...
 
 <br>
 <br>Bed check:
 <br>Su-Th: 2000
 <br>F-Sa: 2200
-<br>Uniform: Summer PTs with shower shoes Phase badge, Room key, CAC, and dog tags
+<br>Uniform: Summer PTs with shower shoes, Phase badge, Room key, CAC, and dog tags.
 
 <br>
 <br>In-Processing: Monday @ 0700 @ Eifler Gym // Eat breakfast before you go there.
@@ -948,27 +952,28 @@ border: solid 2px;
 <br><a href="tel:520-533-2997">520-533-2997</a><label> - COVID Hotline</label>
 <br><a href="tel:520-538-6969">520-538-6969</a><label> - iWATCH (Report suspicious activity)</label>
 <br>
-Medical:
-<br><a href="tel:520-533-6709">520-533-6709</a><label> - MISC</label>
-<br><a href="tel:520-533-5970">520-533-5970</a><label> - MISC</label>
-<br><a href="tel:520-538-0043">520-538-0043</a><label> - MISC</label>: M-F 0430-1400
-<br><a href="https://maps.google.com/maps?q=31.564339,-110.341770">https://maps.google.com/maps?q=31.564339,-110.341770</a>
-<br>
-
-
-<br><a href="tel:520-533-9165">520-533-9165</a><label> - WAC</label>: Sat 0700-1600
-<br>
-
-<br><a href="tel:520-533-2627">520-533-2627</a><label> - RW Bliss</label>
-<br><a href="tel:520-533-9200">520-533-9200</a><label> - RW Bliss</label>
-<br>
-<br><a href="tel:520-533-9102">520-533-9102</a><label> - Physical Therapy</label>
-<br><a href="tel:520-533-9236">520-533-9236</a><label> - Physical Therapy</label>
+<br><br>Medical:
+<br>    MISC (Military Intelligence Student Clinic): M-F 0430-1400
+<br><a href="tel:520-533-6709">520-533-6709</a>
+<br><a href="tel:520-533-5970">520-533-5970</a>
+<br><a href="tel:520-538-0043">520-538-0043</a>
+<br>Location: <a href="https://maps.google.com/maps?q=31.564339,-110.341770">https://maps.google.com/maps?q=31.564339,-110.341770</a>
 
 <br>
-<br><a href="tel:520-533-1492">520-533-1492</a><label> - Dental</label>
-<br><a href="tel:520-533-3147">520-533-3147</a><label> - Dental</label>
-<br><a href="tel:520-481-7219">520-481-7219</a><label> - Dental</label>
+<br><a href="tel:520-533-9165">520-533-9165</a><label> - WAC (Weekend Clinic)</label>: Sat 0700-1600 (Closed because of COVID)
+
+<br><br>RW Bliss (Hospital, on post)
+<br><a href="tel:520-533-2627">520-533-2627</a>
+<br><a href="tel:520-533-9200">520-533-9200</a>
+
+<br><br>Physical Therapy
+<br><a href="tel:520-533-9102">520-533-9102</a>
+<br><a href="tel:520-533-9236">520-533-9236</a>
+
+<br><br>Dental
+<br><a href="tel:520-533-1492">520-533-1492</a>
+<br><a href="tel:520-533-3147">520-533-3147</a>
+<br><a href="tel:520-481-7219">520-481-7219</a>
 
 <br><a href="tel:520-227-5563">520-227-5563</a><label> - Dental CQ (after hours)</label>
 
@@ -976,7 +981,7 @@ Medical:
 <br><a href="tel:520-533-9197">520-533-9197</a><label> - Optometry</label>: M-W, F 0700-1600 
 <br>You can do a walk-in at the MISC.
 <br>
-<br><a href="tel:520-533-5311">520-533-5311</a><label> - AWC</label>
+<br><a href="tel:520-533-5311">520-533-5311</a><label> - AWC (Army Wellness Center)</label>
 <br>
 
 <br><br>Counseling:
@@ -986,8 +991,9 @@ Medical:
 
 
 <br><br>Family:
-<br><a href="tel:520-515-9000">520-515-9000</a><label> - Housing</label>
-<br><a href="tel:520-533-3083">520-533-3083</a><label> - Housing</label>
+<br>Housing
+<br><a href="tel:520-515-9000">520-515-9000</a>
+<br><a href="tel:520-533-3083">520-533-3083</a>
 <br><a href="https://www.mountainvistacommunities.com">https://www.mountainvistacommunities.com</a><label> - Housing Website</label>
 
 <br><br>Transportation:
@@ -1039,10 +1045,11 @@ Medical:
 <br><a href="tel:520-533-4723">520-533-4723</a><label> - Eifler Gym</label>
 <br><a href="tel:520-732-6933">520-732-6933</a><label> - Education Center</label>
 
-<br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>: M,Tu,W,F: 0830-1630; Th: 1330-1630
+<br><br><a href="tel:520-533-1144">520-533-1144</a><label> - IG (Inspector General)</label>
+<br>Hours: M, Tu, W, F: 0830-1630; Th: 1330-1630
 <br><a href="mailto:usarmy.huachuca.icoe.mbx.inspector-general@mail.mil">usarmy.huachuca.icoe.mbx.inspector-general@mail.mil</a>
 <br><a href="https://www.ikn.army.mil/apps/IKNHostedWebsites/IG">IG Website</a>
-<br>Violations of Regulations/Policy,
+<br>Services: Violations of Regulations/Policy,
 <br>reach to the agencies to get the right processes (to get BAH, FSA, correct pay, etc),
 <br>entitlements, reprisal
 
