--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@ border: solid 2px;
 <br><br>Counseling:
 <br><a href="tel:520-533-5161">520-533-5161</a><label> - Behavioral Health (BH)</label>
 <br>Chaplain (Confidential)
-
+<br>
 
 
 <br><br>Family:
@@ -1003,24 +1003,27 @@ border: solid 2px;
 
 <br>
 <br><a href="tel:520-533-6871">520-533-6871</a><label> - Exceptional Family Member Program (EFMP)</label>
+<br><a href="tel:520-533-2767">520-533-2767</a><label> - Veterinary</label>
+<br><a href="tel:520-678-8112">520-678-8112</a><label> - Ecology (wildlife)</label>
+<br><a href="tel:520-538-6319">520-538-6319</a><label> - CYS (Child Youth Services / Childcare)</label>
+<br><a href="tel:520-538-8649">520-538-8649</a><label> - Family Action Plan(AFAP)</label>
+<br><a href="tel:520-538-5899">520-538-5899</a><label> - Employment Readiness Program (ERP)</label>
+<br><a href="tel:520-533-5919">520-533-5919</a><label> - Relocation</label>
+<br><a href="tel:520-533-8961">520-533-8961</a><label> - New Parent Support</label>
+<br><a href="tel:520-533-6878">520-533-6878</a><label> - Family Advocacy</label>
+<br><br>Social Worker
+<br><a href="tel:520-533-3686">520-533-3686</a>
+<br><a href="tel:520-533-2330">520-533-2330</a>
 
-<br>520-533-2767 - Veterinary
-<br>520-678-8112 - Ecology (wildlife)
-<br>520-538-6319 - CYS (Childcare)
-<br>520-538-8649 - Family Action Plan (AFAP)
-<br>520-538-5899 - Employment Readiness Program (ERP)
-<br>520-533-5919 - Relocation
-<br>520-533-8961 - New Parent Support
-<br>520-533-6878 - Family Advocacy
-<br>520-533-3686 / 2330 - Social Worker
-<br>
-<br>Ride:
-<br>520-775-2448 - Evelyn’s Taxi
-<br>520-439-8294 - Two Tone Taxi
-<br>520-249-4350 - Vibe Ryde
-<br>520-439-0439 - Huachuca Shuttle
-<br>520-300-0000 - Yellow Cab Tucson
-<br>520-458-3330 - AZ World Shuttle
+
+<br><br>Ride:
+<br><a href="tel:520-439-0439">520-439-0439</a><label> - Huachuca Shuttle</label>
+<br><a href="tel:520-775-2448">520-775-2448</a><label> - Evelyn's Taxi</label>
+<br><a href="tel:520-439-8294">520-439-8294</a><label> - Two Tone Taxi</label>
+<br><a href="tel:520-249-4350">520-249-4350</a><label> - Vibe Ryde</label>
+<br><a href="tel:520-300-0000">520-300-0000</a><label> - Yellow Cab Tucson</label>
+<br><a href="tel:520-458-3330">520-458-3330</a><label> - AZ World Shuttle</label>
+
 
 <br><br>SHARP
 <br><a href="tel:1-877-995-5247">1-877-995-5247</a><label> - DoD Safe Helpline (24/7)</label>
@@ -1082,20 +1085,41 @@ border: solid 2px;
 
 
 <br><br>Law:
-<br>520-533-2291 - IOC (After hrs Emergencies)
-<br>520-533-3000 - Military Police (MP)
-<br>520-533-2628 - Criminal Investigation Division (CID)
-<br>520-508-2772 / 2993 - Domestic Violence
-<br>1-800-273-8255 - National Domestic Violence
-<br>1-888-767-2445 - Child Protective Services
-<br>520-533-1670 / 8895
-<br>520-255-5133 - 309th MI BN On-Call VA
-<br>520-533-4748 / 1278
-<br>520-255-4437 - Mil. Family Life Consultant
-<br>520-678-7178   (MFLC) (Confidential)
-<br>1-800-273-8255 - Mil. Crisis Line - Text: 838255
-<br>1-800-342-9647 - Military One Source (Confidential, 24/7)
+<br><a href="tel:520-533-2291">520-533-2291</a><label> - IOC (After hrs Emergencies)</label>
+<br><a href="tel:520-533-3000">520-533-3000</a><label> - Military Police (MP)</label>
+<br><a href="tel:520-533-2628">520-533-2628</a><label> - Criminal Investigation Division (CID)</label>
+
+<br><br>Domestic Violence
+<br><a href="tel:520-508-2772">520-508-2772</a>
+<br><a href="tel:520-508-2993">520-508-2993</a>
+<br>
+<br><a href="tel:1-800-273-8255">1-800-273-8255</a><label> - National Domestic Violence</label>
+
+<br><br>Child Protective Services
+<br><a href="tel:1-888-767-2445">1-888-767-2445</a>
+<br><a href="tel:520-533-1670">520-533-1670</a>
+<br><a href="tel:520-533-8895">520-533-8895</a>
+
+<br><br>309th MI BN On-Call VA
+<br><a href="tel:520-255-5133">520-255-5133</a>
+<br><a href="tel:520-533-4748">520-533-4748</a>
+<br><a href="tel:520-533-1278">520-533-1278</a>
+
+<br><br>Mil. Family Life Consultant (MFLC) (Confidential)
+<br><a href="tel:520-255-4437">520-255-4437</a>
+<br><a href="tel:520-678-7178">520-678-7178</a>
+
+<br><br>Mil. Crisis Line
+<br><a href="tel:1-800-273-8255">1-800-273-8255</a>
+<br>Text: <a href="text:838255">838255</a>
+
+<br><br>1-800-342-9647 - Military One Source (Confidential, 24/7)
+</label>
+<br><a href="tel:520-533-">520-533-</a>
+<br><a href="tel:520-533-">520-533-</a>
 <br>1-800-464-8107
+
+<br>
 <br>1-866-495-6735 - AZ Complete Health (24/7) - TTY: 711
 <br>1-866-780-9758 - Alcoholic Anonymous
 <br>520-459-0031 - Alcoholic Anonymous Cochise County
