--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@ border: solid 2px;
 
 <br><br>Mil. Crisis Line
 <br><a href="tel:1-800-273-8255">1-800-273-8255</a>
-<br>Text: <a href="text:838255">838255</a>
+<br>Text: <a href="sms:838255">838255</a>
 
 <br><br>1-800-342-9647 - Military One Source (Confidential, 24/7)
 </label>
