--- a/index.html
+++ b/index.html
@@ -891,6 +891,7 @@ border: solid 2px;
 <br>Mail Address: 
 <br>RANK Last, First
 <br>HOLD CO, 111TH MI BDE
+<br>2520 HEALY AVE BLDG 84402
 <br>FORT HUACHUCA, AZ 85613
 
 <br>
