--- a/index.html
+++ b/index.html
@@ -896,8 +896,8 @@ border: solid 2px;
 
 <br>
 <br>Weinstein DFAC: 
-<br>M-F: 0600-0730, 1130-1300, 1700-1830
-<br>Weekends/Holidays: ...
+<br>M-Sa: 0600-0730, 1130-1300, 1700-1830
+<br>Su/Holidays: 0900-1230, 1630-1800
 
 <br>
 <br>Bed check:
