--- a/index.html
+++ b/index.html
@@ -869,30 +869,6 @@ border: solid 2px;
 <br>
 <br>Appointments:
 <br>-Must turn in to DS
-<br>
-<br>DS Office:
-<br>-Knock on the door (or plastic piece near the door)  and announce:
-<br>  [your Rank and  Name] with a battle buddy (you can say their name) requesting permission to speak with a DS. 
-<br>  Ex. Private Doe with specialist Smith requesting permission to speak with a drill sergeant.
-<br>  Ex. Private Doe with a battle buddy requesting permission to speak with a drill sergeant.
-
-
-<br>
-<br>Hold Co Moto: Nomads
-<br>Hold Co Response: Kill them all
-<br>
-<br>309th BN Moto: Sentinels of Security
-<br>309th BN Response: Sentinel Pride!
-<br>
-<br>C Co, 309th Moto: Maintain the Edge
-<br>C Co, 309th Response: Razor Sharp
-
-<br>
-<br>Mail Address: 
-<br>RANK Last, First
-<br>HOLD CO, 111TH MI BDE
-<br>2520 HEALY AVE BLDG 84402
-<br>FORT HUACHUCA, AZ 85613
 
 <br>
 <br>Weinstein DFAC: 
@@ -908,6 +884,13 @@ border: solid 2px;
 <br>
 <br>In-Processing: Monday @ 0700 @ Eifler Gym // Eat breakfast before you go there.
 <br>Uniform: ACU (OCP), with In-Processing packet, BCT Packet, 5x copies of orders, 2x copies of DA31
+
+
+DD1172
+https://www.dmdc.osd.mil/self_service/rapids/unauthenticated?execution=e1s1
+https://www.dmdc.osd.mil/self_service
+-> Print Family List
+
 </details></fieldset>
 
 
@@ -925,6 +908,26 @@ border: solid 2px;
 <br>
 <br><a href="https://drive.google.com/file/d/1cxJZJdY__zD-8vRS9M1fuRBmPB7D7ao1/view?usp=sharing">Hold Co SOP - Barracks</a>
 <br><a href="https://drive.google.com/file/d/1DAy1kV1NgVoiy0jbYNqO1l3aqXZpdFWd/view?usp=sharing">Hold Co SOP - Company</a>
+<br>
+
+<br>
+<br>DS Office:
+<br>-Knock on the door (or plastic piece near the door)  and announce:
+<br>  [your Rank and  Name] with a battle buddy (you can say their name) requesting permission to speak with a DS. 
+<br>  Ex. Private Doe with specialist Smith requesting permission to speak with a drill sergeant.
+<br>  Ex. Private Doe with a battle buddy requesting permission to speak with a drill sergeant.
+
+
+<br>
+<br>Hold Co Moto: Nomads
+<br>Hold Co Response: Kill them all
+
+<br>
+<br>Mail Address: 
+<br>RANK Last, First
+<br>HOLD CO, 111TH MI BDE
+<br>2520 HEALY AVE BLDG 84402
+<br>FORT HUACHUCA, AZ 85613
 
 <br>
 </details></fieldset>
@@ -935,6 +938,14 @@ border: solid 2px;
 <label>CQ Phone: </label><a href="tel:520-533-6401">520-533-6401</a>
 <br><label>Co Email: </label><a href="mailto:charlie309th@gmail.com">charlie309th@gmail.com</a>
 <br><a href="https://www.facebook.com/ComancheCompany309th">C Co, 309th Facebook page</a>
+
+<br>
+<br>309th BN Moto: Sentinels of Security
+<br>309th BN Response: Sentinel Pride!
+<br>
+<br>C Co, 309th Moto: Maintain the Edge
+<br>C Co, 309th Response: Razor Sharp
+
 </details>
 
 
