--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ border: solid 2px;
 
 <br><br>
 <fieldset><details open><summary>Housing</summary>
-If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you might, move out of the Barracks.
+If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you may, move out of the Barracks.
 
 
 <br><br>Required documents:
