--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@ border: solid 2px;
 
 <br><br>
 <fieldset><details open><summary>Housing</summary>
-If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you may, move out of the Barracks.
+If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you may move out of the Barracks.
 
 
 <br><br>Required documents:
@@ -973,22 +973,22 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
 
 <br><a href="https://www.facebook.com/FMWRFortHuachuca/">Fort Huachuca MWR - Facebook page</a>
 <br><a href="https://huachuca.armymwr.com/">Fort Huachuca MWR - Army page</a>
-<br>most activities on post are driven by MWR, if you want to known what activities might be happening in and around Post.
-
+<br>most activities on post are driven by MWR, if you want to known what activities might be happening in and around post, visit their page.
+<br>
 <br><a href="https://www.facebook.com/groups/529117777235614">Fort Huachuca AIT Support Group</a>
 
-
+<br>
 <br><a href="https://jpp.whs.mil/Public/docs/RFI/Set_1/Encl6-12/RFI_Enclosure_Q07_USA">FH Regulation 600-50</a>
 <br>If you can't find it there, let me know.
 
 
-
+<br>
 <br><a href="111th MI BDE Facebook page
 https://www.facebook.com/111th-Military-Intelligence-Brigade-106356347777249/">111th MI BDE Facebook page</a>
-
+<br>
 <br><a href="https://www.facebook.com/309THMIBN/">309th MI BN Facebook page</a>
 
-
+<br>
 <br>
 <details><summary>35T</summary>
 <label>CQ Phone: </label><a href="tel:520-533-6401">520-533-6401</a>
