--- a/index.html
+++ b/index.html
@@ -850,6 +850,8 @@ border: solid 2px;
 <ul>
     <li>Go anywhere without a battle buddy.</li>
     <li>Throw away any Army issued item.</li>
+    <li>Wear shorts, skirts, ect. that are shorter than your PT shorts.</li>
+    <li>Wear tank tops outside the pool and maybe the gym.</li>
 </ul>
 </fieldset>
 </details></fieldset>
@@ -897,8 +899,7 @@ If you are married, your orders says Dependents: Yes, and your MOS is longer tha
     <br><br>
     <li>DD1172</li>
     <br>DEERS enrollment of your family members. If you don't have an official form, you should set an appointment.
-    <br><a href="https://idco.dmdc.osd.mil/idco/
-">DEERS-RAPIDS ID Card Office Online</a>
+    <br><a href="https://idco.dmdc.osd.mil/idco/">DEERS-RAPIDS ID Card Office Online</a>
 <br>If setting the appointment gives you an error, try removing the dashes from your phone number.
     <br>
     <br>However, to prevent delays in the process, if your family members have an ID you can go to:
