--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ border: solid 2px;
 
 
 <fieldset><!--legend>Personal Datasheet</legend-->
-<details><summary>Personal Datasheet</summary>
+<details><summary>Personal Datasheet (New inbounds)</summary>
 
   <fieldset><details open><summary>Service Member (SM) data:</summary>
     <fieldset><details open><summary>PRIVACY ACT OF 1974 COMPLIANCE INFORMATION</summary>
@@ -889,6 +889,8 @@ border: solid 2px;
 <br><br>
 <fieldset><details open><summary>Housing</summary>
 If you are married, your orders says Dependents: Yes, and your MOS is longer than 6 months (35T, 35G); you may move out of the Barracks.
+
+<br><br>*** You MUST be GOLD phase to move out ***
 
 
 <br><br>Required documents:
