--- a/index.html
+++ b/index.html
@@ -852,6 +852,12 @@ border: solid 2px;
     <li>Throw away any Army issued item.</li>
     <li>Wear shorts, skirts, ect. that are shorter than your PT shorts.</li>
     <li>Wear tank tops outside the pool and maybe the gym.</li>
+    <li>If you receive a phone call asking for money, 
+    <br>unless you are 200% certain,
+    <br><b>DON'T</b> give your money!</li>
+    <br>If you owe money to the government, they'll take your money and you'll see it in your LES.
+    <br>If you want to donate, it has to be to a non-profit organization (Red Cross, AER, etc).
+    <br>Army Emergency Relief (AER) Annual Campaign is conducted from March 1st through May 15th each year.
 </ul>
 </fieldset>
 </details></fieldset>
