--- a/index.html
+++ b/index.html
@@ -855,8 +855,8 @@ border: solid 2px;
     <li>If you receive a phone call asking for money, 
     <br>unless you are 200% certain,
     <br><b>DON'T</b> give your money!</li>
-    <br>If you owe money to the government, they'll take your money and you'll see it in your LES.
-    <br>If you want to donate, it has to be to a non-profit organization (Red Cross, AER, etc).
+    <br>If you owe money to the government, they'll take it and you'll see it in your LES.
+    <br>If you want to donate, it has to be for non-personal reasons, so most likely to a non-profit organization (Red Cross, AER, etc).
     <br>Army Emergency Relief (AER) Annual Campaign is conducted from March 1st through May 15th each year.
 </ul>
 </fieldset>
